<resources>
    <string name="app_name">Code scanner</string>
    <string name="camera">Code scanner</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="no_result_title">No result</string>
    <string name="no_result_message">Sorry, we couldn\'t catch that.</string>
    <string name="try_again">Try again</string>
    <string name="angles_message">Please mark the four angles of the code</string>
    <string name="angles_ready">Angles are ready</string>

    <string name="automatic_navigation">Automatic navigation</string>
    <string name="themes">Themes:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
