<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/result_placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="180dp">

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/no_result_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/no_result_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_result_title"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/no_result_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_result_message"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/result_buttons_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/try_again_result_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:visibility="gone"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="100dp"/>

        <LinearLayout
            android:id="@+id/positive_result_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageButton
                android:id="@+id/copy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_copy"
                android:layout_margin="20dp"/>

            <ImageButton
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share"
                android:layout_margin="20dp"/>

            <ImageButton
                android:id="@+id/open_in_browser_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_open_in_browser"
                android:layout_margin="20dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>